[package]
name = "clumsy_loader"
version = "2.0.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1


[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
color-eyre = "0.6.3"
tokio = { version = "1.44.1", features = ["full"] }
indicatif = "0.17.11"
futures-util = "0.3.31"
ctrlc = "3.4"
